# platform_external_zlib

./: build.sh  build_helper.sh
src/contrib/minizip/: CMakeLists.txt  build_helper.sh  miniunz.c  minizip.c
